package br.upe.computacao.pweb.gerasenhas.gerasenhasapi;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class GerasenhasApiApplication {

	public static void main(String[] args) {
		SpringApplication.run(GerasenhasApiApplication.class, args);
	}

}
