package br.upe.computacao.pweb.gerasenhas.gerasenhasapi.base.excecao;

public class NaoEncontradoException extends GeraSenhasException {

    public NaoEncontradoException(String string) {
        super(string);
    }

}
